@@ -34,6 +34,7 @@ The following bugs are resolved with this release:
   [27706] select fails to update timeout on error
   [27744] Support different libpthread/ld.so load orders for gdb -p
   [27892] powerpc: scv ABI error handling fails to check IS_ERR_VALUE
+  [28607] Masked signals are delivered on thread exit
 
 Version 2.33
 
